Fix education center alignment

--- a/src/sections/styles/Education.scss
+++ b/src/sections/styles/Education.scss
@@ -40,7 +40,8 @@
 
 .education-checklist {
   gap: 15px;
-  align-items: flex-start;
+  justify-self: center;
+  width: fit-content;
   padding: 10px;
   
   /* Describes checklist exiting view */
@@ -98,6 +99,8 @@
   font-size: var(--text-size-subheader);
   color: var(--color-light-text);
   gap: 15px;
+  justify-content: flex-start;
+  width: fit-content;
 }
 
 .checkbox-icon {
@@ -105,6 +108,7 @@
   width: var(--scalable-icon-size);
   height: var(--scalable-icon-size);
   color: var(--color-light-text);
+  margin-top: 1px;
 }
 
 @media (max-width: bp.$small) {
@@ -114,5 +118,8 @@
   }
   .checkbox-wrapper {
     gap: 10px;
+  }
+  .checkbox-icon {
+    margin-top: 2px;
   }
 }
